--- a/htmlPractice.html
+++ b/htmlPractice.html
@@ -13,8 +13,7 @@
 <h2> About Me </h2>
 <p> Hello, I'm Görkem Gül. I am Jr. Software Developer. I am working almost 1 year. I am writing SQL with PostgreSQL.
     I am using Vue.js but beginner. I am working HTML because unfortunetely I forgot. But I love Front-end! :) </p>
-<p> Also, I like music and I am playing flutte for 2 weeks. :) I like travel but I am working hardly and I dont have
-    money yet. Because I live in Turkey. Turkey's economy very bad. </p>
+<p> Also, I like music and I am playing flutte for 2 weeks. :) I like travel but I am working hardly. </p>
 <h3> My Favorite Movies</h3>
 <ol>
     <li>
@@ -25,6 +24,8 @@
     <li> Stranger Things</li>
     <li>...</li>
 </ol>
+
+
 <br>
 <p> My GitHub Account : <a href="https://github.com/gorkemgulk">GitHub</a></p>
 <p> This page's code in my GitHub account. </p>
