--- a/htmlPractice.html
+++ b/htmlPractice.html
@@ -2,35 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <iframe width="950" height="534" src="https://www.youtube.com/embed/9nKoTMl6GpI"
+    <iframe align="right" width="550" height="334" border="7" src="https://www.youtube.com/embed/9nKoTMl6GpI"
             title="Bach Es-dur Sonata flute - BWV1031 Siciliano -Pete Lilla" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
     <title>Let's Meet! </title>
 </head>
 <body>
-<h1> GÖRKEM GÜL KAHVECİ </h1>
-<h2> About Me </h2>
-<p> Hello, I'm Görkem Gül. I am Jr. Software Developer. I am working almost 1 year. I am writing SQL with PostgreSQL.
-    I am using Vue.js but beginner. I am working HTML because unfortunetely I forgot. But I love Front-end! :) </p>
-<p> Also, I like music and I am playing flutte for 2 weeks. :) I like travel but I am working hardly. </p>
-<h3> My Favorite Movies</h3>
-<ol>
-    <li>
-        Fringe (Legend for me)
-    </li>
-    <li> Black Mirror</li>
-    <li> Kuzey Güney (Turkish Series)</li>
-    <li> Stranger Things</li>
-    <li>...</li>
-</ol>
+<div class="row">
+    <h1> GÖRKEM GÜL KAHVECİ </h1>
+    <h2> About Me </h2>
+    <p> Hello, I'm Görkem Gül. I am Jr. Software Developer. I am working almost 1 year. I am writing SQL with
+        PostgreSQL.
+        I am using Vue.js but beginner. I am working HTML because unfortunetely I forgot. But I love Front-end! :) </p>
+    <p> Also, I like music and I am playing flutte for 2 weeks. :) I like travel but I am working hardly. </p>
+    <h3> My Favorite Movies</h3>
+    <ol>
+        <li>
+            <strong> Fringe (Legend for me) </strong>
+            <ul type="square">
+                <li>youu <a href="https://www.imdb.com/title/tt1119644/"> Go IMDB </a></li>
+            </ul>
+        </li>
+        <li> Black Mirror</li>
+        <li> Kuzey Güney (Turkish Series)</li>
+        <li> Stranger Things</li>
+        <li>...</li>
+    </ol>
+    <br>
+    <p> My GitHub Account : <a href="https://github.com/gorkemgulk" target="_blank">GitHub</a></p>
+    <p> This page's code in my GitHub account. </p>
+    <br>
+    <h5> Okey.. My firs HTML doc. See you again :)</h5>
+</div>
 
 
-<br>
-<p> My GitHub Account : <a href="https://github.com/gorkemgulk">GitHub</a></p>
-<p> This page's code in my GitHub account. </p>
-<br>
-<h5> Okey.. My firs HTML doc. See you again :)</h5>
+<p> Again me :)) Please click >>> <a href="page2.html"> xx </a></p>
 
 </body>
 </html>
