--- a/htmlPractice.html
+++ b/htmlPractice.html
@@ -7,9 +7,10 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
     <title>Let's Meet! </title>
+    <style></style>
 </head>
 <body>
-<div class="row">
+<div class="">
     <h1> GÖRKEM GÜL KAHVECİ </h1>
     <h2> About Me </h2>
     <p> Hello, I'm Görkem Gül. I am Jr. Software Developer. I am working almost 1 year. I am writing SQL with
@@ -30,8 +31,14 @@
         <li>...</li>
     </ol>
     <br>
-    <p> My GitHub Account : <a href="https://github.com/gorkemgulk" target="_blank">GitHub</a></p>
-    <p> This page's code in my GitHub account. </p>
+    <hr>
+    <figcaption>
+        <p> GitHub : </p>
+    <figure>
+        <p> My Account : <a href="https://github.com/gorkemgulk" target="_blank">Click</a></p>
+        <p> This page's code in my GitHub account. </p>
+    </figure>
+    </figcaption>
     <br>
     <h5> Okey.. My firs HTML doc. See you again :)</h5>
 </div>
